# mlx_sandbox

./: .gitignore  CMakeLists.txt  a.out  image.c  key.h  main.c  main.c.old  map.c  notes  player.c  player.h  sandbox.h  up.sh  vector.c  vector.h
includes/: consts.h  control.h  cub3d.h  draw.h  image.h  map.h  player.h  rays.h  utils.h
src/control/: die.c  keys.c
src/draw/: draw.c
src/extra/: utils.c
src/image/: image.c
src/map/: map.c  utils.c
src/player/: player.c  utils.c
src/rays/: horizontal_cast.c  project.c  rays.c  vertical_cast.c
